apps/admin/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.umhomelab.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
    - host: www.longhorn.umhomelab.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
  tls:
    - hosts:
        - longhorn.umhomelab.com
        - www.longhorn.umhomelab.com
